[gd_scene load_steps=9 format=3 uid="uid://dgv3s4juhsgcv"]

[ext_resource type="Script" path="res://Nodes/BS/BSRagdollContactListenerModifierScene.gd" id="1_h5b0x"]
[ext_resource type="Texture2D" uid="uid://dtc4ja5slmyqt" path="res://Resources/Icons/ConfirmDeleteButton.png" id="2_6hamv"]
[ext_resource type="Texture2D" uid="uid://dtrsj56jbquo8" path="res://Resources/Icons/PinButton.png" id="3_4t2q4"]
[ext_resource type="Texture2D" uid="uid://csb3wjekhlmy1" path="res://Resources/Icons/UnpinButton.png" id="4_uhr11"]
[ext_resource type="Texture2D" uid="uid://jrafqhji2unw" path="res://Resources/Icons/DeleteButton.png" id="5_ud46s"]
[ext_resource type="Script" path="res://Nodes/hkbS/Scripts/eventToSendidOptionButton.gd" id="6_wss4g"]
[ext_resource type="Script" path="res://Nodes/hkbS/Scripts/eventToSendPayloadOptionButton.gd" id="7_s842g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y45yo"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.168627, 0.211765, 0.266667, 0.898039)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 1
anti_aliasing_size = 2.0

[node name="BSRagdollContactListenerModifier" type="GraphNode"]
offset_right = 340.0
offset_bottom = 180.0
title = "BSRagdollContactListenerModifier"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_h5b0x")

[node name="connection" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="connectionLabel" type="Label" parent="connection"]
layout_mode = 2
text = "connection
"

[node name="Space" type="Control" parent="connection"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="EditButton" type="Button" parent="connection"]
layout_mode = 2
text = "Edit"

[node name="variableBindingSet" type="Label" parent="."]
layout_mode = 2
text = "variableBindingSet"
horizontal_alignment = 2

[node name="bones" type="Label" parent="."]
layout_mode = 2
text = "bones"
horizontal_alignment = 2

[node name="Name" type="LineEdit" parent="."]
layout_mode = 2
text = "RagdollContactListenerModifier"
placeholder_text = "Name"

[node name="DataPopupPanel" type="PopupPanel" parent="."]
transparent_bg = true
initial_position = 1
size = Vector2i(543, 244)
visible = true
borderless = false
theme_override_styles/panel = SubResource("StyleBoxFlat_y45yo")

[node name="VBoxContainer" type="VBoxContainer" parent="DataPopupPanel"]
offset_left = 5.0
offset_top = 5.0
offset_right = 538.0
offset_bottom = 239.0

[node name="BaseNode" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer"]
layout_mode = 2

[node name="ConfirmDeleteButton" type="TextureButton" parent="DataPopupPanel/VBoxContainer/BaseNode"]
visible = false
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("2_6hamv")

[node name="baseNodeLabel" type="Label" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 18
text = "   BSRagdollContactListenerModifier"
vertical_alignment = 2

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="baseNodeLabel2" type="Label" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "#"
vertical_alignment = 1

[node name="nodeIDSpinBox" type="SpinBox" parent="DataPopupPanel/VBoxContainer/BaseNode"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
min_value = 90.0
max_value = 9999.0
value = 90.0
rounded = true

[node name="PinButton" type="TextureButton" parent="DataPopupPanel/VBoxContainer/BaseNode"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("3_4t2q4")
texture_pressed = ExtResource("4_uhr11")

[node name="DeleteButton" type="TextureButton" parent="DataPopupPanel/VBoxContainer/BaseNode"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("5_ud46s")

[node name="PanelContainer" type="PanelContainer" parent="DataPopupPanel/VBoxContainer"]
layout_mode = 2

[node name="FoldingPanel" type="VBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="userData" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="userDataLabel" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/userData"]
layout_mode = 2
text = "   userData"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/userData"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="userDataButton" type="OptionButton" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/userData"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "0"
popup/item_0/id = 0
popup/item_1/text = "1"
popup/item_1/id = 1
popup/item_2/text = "2"
popup/item_2/id = 2
popup/item_3/text = "3"
popup/item_3/id = 3

[node name="enable" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enable"]
layout_mode = 2
text = "   enable"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enable"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="enableButton" type="OptionButton" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enable"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
item_count = 2
selected = 1
popup/item_0/text = "False"
popup/item_0/id = 0
popup/item_1/text = "True"
popup/item_1/id = 1

[node name="EventToSend" type="PanelContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/EventToSend"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/EventToSend/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/EventToSend/VBoxContainer/PanelContainer"]
layout_mode = 2
text = "contactEvent"
horizontal_alignment = 1

[node name="UpdatePayload" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/EventToSend/VBoxContainer"]
layout_mode = 2

[node name="Space2" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/EventToSend/VBoxContainer/UpdatePayload"]
layout_mode = 2
size_flags_horizontal = 6

[node name="updatePayloadButton" type="Button" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/EventToSend/VBoxContainer/UpdatePayload"]
custom_minimum_size = Vector2(420, 32)
layout_mode = 2
text = "Update Graph Data"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/EventToSend/VBoxContainer/UpdatePayload"]
layout_mode = 2
size_flags_horizontal = 6

[node name="id" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/EventToSend/VBoxContainer"]
layout_mode = 2

[node name="idLabel" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/EventToSend/VBoxContainer/id"]
layout_mode = 2
text = "   id
"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/EventToSend/VBoxContainer/id"]
layout_mode = 2
size_flags_horizontal = 6

[node name="idOptionButton" type="OptionButton" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/EventToSend/VBoxContainer/id"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "null"
popup/item_0/id = 0
script = ExtResource("6_wss4g")

[node name="payload" type="HBoxContainer" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/EventToSend/VBoxContainer"]
layout_mode = 2

[node name="payloadLabel" type="Label" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/EventToSend/VBoxContainer/payload"]
layout_mode = 2
text = "   payload"

[node name="Space" type="Control" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/EventToSend/VBoxContainer/payload"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="eventToSendPayloadOptionButton" type="OptionButton" parent="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/EventToSend/VBoxContainer/payload"]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "null"
popup/item_0/id = 0
script = ExtResource("7_s842g")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="connection/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="text_changed" from="Name" to="." method="_on_name_text_changed"]
[connection signal="popup_hide" from="DataPopupPanel" to="." method="_on_popup_panel_popup_hide"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/BaseNode/ConfirmDeleteButton" to="." method="_on_confirm_delete_button_pressed"]
[connection signal="value_changed" from="DataPopupPanel/VBoxContainer/BaseNode/nodeIDSpinBox" to="." method="_on_node_id_spin_box_value_changed"]
[connection signal="toggled" from="DataPopupPanel/VBoxContainer/BaseNode/PinButton" to="." method="_on_pin_button_toggled"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/BaseNode/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="item_selected" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/userData/userDataButton" to="." method="_on_user_data_button_item_selected"]
[connection signal="item_selected" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/enable/enableButton" to="." method="_on_enable_button_item_selected"]
[connection signal="pressed" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/EventToSend/VBoxContainer/UpdatePayload/updatePayloadButton" to="." method="_on_update_payload_button_pressed"]
[connection signal="item_selected" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/EventToSend/VBoxContainer/id/idOptionButton" to="." method="_on_id_option_button_item_selected"]
[connection signal="item_selected" from="DataPopupPanel/VBoxContainer/PanelContainer/FoldingPanel/EventToSend/VBoxContainer/payload/eventToSendPayloadOptionButton" to="." method="_on_event_to_send_payload_option_button_item_selected"]
